[project]
name = "pandora-avatar"
authors = [{name = "Pandora", email = "pandora-core@google.com"}]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "bt-test-interfaces",
    "bumble==0.0.153",
    "grpcio>=1.51.1",
    "mobly>=1.12",
    "bitstruct>=8.12",
]

[project.urls]
Source = "https://github.com/google/avatar"

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.51.1",
    "black==22.10.0",
    "pyright==1.1.298",
    "mypy==1.0",
    "isort==5.12.0",
    "types-psutil>=5.9.5.6",
    "types-setuptools>=65.7.0.3",
    "types-protobuf>=4.21.0.3"
]

[tool.black]
line-length = 119
target-version = ["py38", "py39", "py310", "py311"]
skip-string-normalization = true

[tool.flit.module]
name = "avatar"

[tool.isort]
profile = "black"
line_length = 119
no_sections = true
lines_between_types = 1
combine_as_imports = true

[tool.mypy]
strict = true
warn_unused_ignores = false
files = ["avatar", "cases"]

[[tool.mypy.overrides]]
module = "grpc.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mobly.*"
ignore_missing_imports = true

[tool.pyright]
include = ["avatar", "cases"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
verboseOutput = false
reportMissingTypeStubs = false
reportUnknownLambdaType = false
reportImportCycles = false

[tool.pytype]
inputs = ['avatar', 'cases']

[build-system]
requires = ["flit_core==3.7.1"]
build-backend = "flit_core.buildapi"
